# my-agentes

./: README.md  langgraph.json  pyproject.toml
datos/chroma_db/: chroma.sqlite3
documentos/: README.txt
notebooks/: 01-notebook.ipynb  09-prompting.ipynb  10-prompting.ipynb
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/nodes/research/: config.py  node.py  prompt.py  tools.py  vectorstore.py
src/agents/support/routes/intent/: prompt.py  route.py
