[project]
name = "my-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-openai>=1.1.5",
    "langchain-tavily>=0.2.15",
    "langgraph>=1.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.11",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
